[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/Level3.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/Level.gd" type="Script" id=2]

[node name="Level" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="WordTarget" parent="." index="1"]
word = "PLOTHOLE"

[node name="WorkArea" parent="." index="2"]
position = Vector2( 512, 480 )
show_rotation_block = true
word = "PLOTHOLE"

[node name="NarrationBox" parent="." index="7"]
margin_bottom = 148.0
lines = [ "text 1", "text 2", "text 3", "text 4", "When something does not feel right..." ]

[node name="LevelComplete" parent="." index="8"]
level_num = 4
